clusters/cluster/apps/media/jellyfin/deployment-jellyfin.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: jellyfin
  namespace: apps
spec:
  replicas: 1
  selector:
    matchLabels:
      app: jellyfin
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 1
  template:
    metadata:
      labels:
        app: jellyfin
    spec:
      containers:
      - name: jellyfin
        image: jellyfin/jellyfin # TODO: Change tag
        ports:
        - containerPort: 8096
          hostPort: 8096
        volumeMounts:
        - name: media-volume
          mountPath: /mnt/media
        - name: config-volume
          mountPath: /etc/jellyfin
          subPath: media/jellyfin/config
        - name: config-volume
          mountPath: /var/lib/jellyfin
          subPath: media/jellyfin/data
      volumes:
      - name: media-volume
        persistentVolumeClaim:
          claimName: media-pvc
      - name: config-volume
        persistentVolumeClaim:
          claimName: config-pvc
