clusters/cluster/apps/media/jellyfin/service-externalname-jellyfin.yaml
apiVersion: v1
kind: Service
metadata:
  name: jellyfin-public
  namespace: apps
spec:
  type: ExternalName
  externalName: jellyfin.${cluster_domain}
