clusters/cluster/apps/media/jellyfin/service-jellyfin.yaml
apiVersion: v1
kind: Service
metadata:
  name: jellyfin
  namespace: apps
spec:
  selector:
    app: jellyfin
  ports:
    - protocol: TCP
      port: 8096
      targetPort: 8096
      name: http
